Refactored some code

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -201,7 +201,7 @@
     <string name="field_not_filled_in">Compila il campo</string>
     <string name="error_password_length">La lunghezza della password deve essere di 6 caratteri o più</string>
     <string name="error_confirm_password_equal">Conferma Password deve essere uguale al campo Password</string>
-    <string name="error_gender">Seleziona un\'identità di genere valida</string>
+    <string name="error_gender">Seleziona un genere valido</string>
     <string name="error_not_enough_genre">Seleziona almeno 3 argomenti di interesse</string>
     <string name="error_collection_name_not_valid">Nome della collezione non valido</string>
     <string name="error_collection_name_not_unique">Il nome della collezione deve essere unico.</string>
