--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="textview_description_title">Description</string>
     <string name="textview_icon_already_read">Already read?</string>
     <string name="textview_icon_add_to_collection">Add to …</string>
-    <string name="textview_slogan">Reading.\nThe Clever Way.</string>
+    <string name="textview_slogan">Your library at your fingertips.</string>
     <string name="hint_search_book">Enter book title</string>
     <string name="button_search">Search</string>
     <string name="hint_search_author">Enter author name</string>
@@ -179,6 +179,13 @@
     <string name="choose_gender">Choose your gender</string>
     <string name="choose_subjects">Choose at least 3 topics that might interest you</string>
     <string name="complete_registration">Complete registration</string>
+    <string name="theme">Theme</string>
+    <string name="logout" translatable="false">Logout</string>
+    <string name="authentication_required">Authentication required</string>
+    <string name="current_email">Current email</string>
+    <string name="biography">Biography</string>
+    <string name="edit_sensible_data">Edit sensible data</string>
+    <string name="error_bio_length">The biography must not exceed 100 characters.</string>
 
     <!-- chip genres -->
     <string-array name="chip_genres">
