--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -172,10 +172,14 @@
     <string name="complete_registration">Completa la registrazione</string>
     <string name="theme">Tema</string>
     <string name="authentication_required">Autenticazione richiesta</string>
+    <string name="authentication_confirmed">Autenticazione confermata</string>
+    <string name="authentication_failed">Autenticazione fallita</string>
     <string name="current_email">Email corrente</string>
     <string name="biography">Biografia</string>
     <string name="edit_sensible_data">Modifica dati sensibili</string>
     <string name="error_bio_length">La biografia non deve superare 100 caratteri.</string>
+    <string name="updated_profile">Il profilo è stato aggiornato</string>
+    <string name="updated_password">La password è stata aggiornata</string>
 
 
     <!-- chip genres -->
@@ -206,6 +210,7 @@
     <string name="email_already_taken">Email già in uso</string>
     <string name="email_invalid_input">Errore email: input non valido</string>
     <string name="field_not_filled_in">Compila il campo</string>
+    <string name="fields_not_filled_in">Compila almeno un campo</string>
     <string name="error_password_length">La lunghezza della password deve essere di 6 caratteri o più</string>
     <string name="error_confirm_password_equal">Conferma Password deve essere uguale al campo Password</string>
     <string name="error_gender">Seleziona un genere valido</string>
@@ -214,6 +219,9 @@
     <string name="error_collection_name_not_unique">Il nome della collezione deve essere unico.</string>
     <string name="generic_error">Sistema: errore generico interno</string>
     <string name="input_lack_error">Campo obbligatorio</string>
+    <string name="generic_error_username">Sistema: errore username</string>
+    <string name="generic_error_password">Sistema: errore password</string>
+    <string name="username_already_own">Questo è già il tuo nome utente</string>
 
     <!-- plurals -->
     <plurals name="books">
