--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="pa_description_arrow" translatable="false">arrow right</string>
     <string name="pa_description_photo" translatable="false">personal area photo</string>
     <string name="pa_notes">Notes</string>
+    <!-- c'è un'altra stringa con lo stesso valore -->
     <string name="pa_edit_profile">Edit profile</string>
     <string name="pa_stats">Statistics</string>
     <string name="pa_title">My Personal Area</string>
@@ -46,6 +47,7 @@
     <string name="register">Register</string>
     <string name="name">Name</string>
     <string name="surname">Surname</string>
+    <!-- c'è un'altra stringa con lo stesso valore -->
     <string name="username" translatable="false">Username</string>
 
     <string-array name="gender">
@@ -182,10 +184,15 @@
     <string name="theme">Theme</string>
     <string name="logout" translatable="false">Logout</string>
     <string name="authentication_required">Authentication required</string>
+    <string name="authentication_confirmed">Authentication confirmed</string>
+    <string name="authentication_failed">Authentication failed</string>
     <string name="current_email">Current email</string>
     <string name="biography">Biography</string>
     <string name="edit_sensible_data">Edit sensible data</string>
     <string name="error_bio_length">The biography must not exceed 100 characters.</string>
+    <string name="updated_profile">Profile has been updated</string>
+    <string name="updated_password">Password has been updated</string>
+
 
     <!-- chip genres -->
     <string-array name="chip_genres">
@@ -235,6 +242,7 @@
     <string name="email_already_taken">Email already taken</string>
     <string name="email_invalid_input">Email error: invalid input</string>
     <string name="field_not_filled_in">Fill in the field</string>
+    <string name="fields_not_filled_in">Fill in at least one field</string>
     <string name="error_password_length">Password length must be 6 characters or higher</string>
     <string name="error_confirm_password_equal">Confirm Password must be equal to Password field</string>
     <string name="error_gender">Select a valid gender</string>
@@ -243,6 +251,9 @@
     <string name="error_collection_name_not_unique">The name of the collection must be unique.</string>
     <string name="generic_error">System: generic internal error</string>
     <string name="input_lack_error">Required field</string>
+    <string name="generic_error_username">System: username error</string>
+    <string name="generic_error_password">System: password error</string>
+    <string name="username_already_own">This is already your username</string>
 
     <!-- plurals -->
     <plurals name="books">
