added correct input checks on registration

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -212,6 +212,7 @@
     <string name="email_invalid_input">Errore email: input non valido</string>
     <string name="field_not_filled_in">Compila il campo</string>
     <string name="fields_not_filled_in">Compila almeno un campo</string>
+    <string name="fields_required">Compila tutti i campi</string>
     <string name="error_password_length">La lunghezza della password deve essere di 6 caratteri o più</string>
     <string name="error_confirm_password_equal">Conferma Password deve essere uguale al campo Password</string>
     <string name="error_gender">Seleziona un genere valido</string>
