--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -109,6 +109,7 @@
     <string name="textview_following">Seguiti</string>
     <string name="follow_button_string">Segui</string>
     <string name="unfollow_button_string">Smetti di seguire</string>
+    <string name="unfollow_short_button_string">Segui già</string>
     <string name="content_description_background_book">Sfondo contenente una versione blurrata della copertina del libro.</string>
     <string name="content_description_add_to_collection">Aggiungi un libro ad una collezione.</string>
     <string name="snackbar_empty_comment">Non puoi inserire un commento vuoto.</string>
